Quad View Glitch #39065

Closed
opened 2014-03-09 08:46:05 +01:00 by Robert Nathan Garlington · 8 comments

Windows 8, Nvidia Titan

Blender Version
Broken: (2.70 RC1)
Worked: (unsure)

The 'User Persp' view behaves strangely when toggling between the panes in Quad view.

If for instance you go into quad view, then use the 'screen.region_quadview' function to go full screen into one of the Ortho views and then toggle out to quad view again, the User Persp view switches to another camera angle, and doesn't save its previous positioning.

Also switching in and out of the front, right or top ortho views yields different camera re-positioning results for the User Persp view as well. In addition, if there is a camera present in the scene, switching between any view will always result in the User Persp defaulting to the Camera View, regardless if I want it to or not.

Windows 8, Nvidia Titan **Blender Version** Broken: (2.70 RC1) Worked: (unsure) The 'User Persp' view behaves strangely when toggling between the panes in Quad view. If for instance you go into quad view, then use the 'screen.region_quadview' function to go full screen into one of the Ortho views and then toggle out to quad view again, the User Persp view switches to another camera angle, and doesn't save its previous positioning. Also switching in and out of the front, right or top ortho views yields different camera re-positioning results for the User Persp view as well. In addition, if there is a camera present in the scene, switching between any view will always result in the User Persp defaulting to the Camera View, regardless if I want it to or not.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @RobertGarlington

Added subscriber: @RobertGarlington

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Campbell Barton self-assigned this 2014-03-09 10:08:34 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed d71db08f6d

When a locked view is active, the unlocked view settings are used.

Fixed d71db08f6d When a locked view is active, the unlocked view settings are used.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This fix changed quadview behaviour drastically. I used to use quad-view all the time in laptops to quickly switch between the current view and the ortho views. If this was intentional, fine, but I do miss the old behaviour.

This fix changed quadview behaviour drastically. I used to use quad-view all the time in laptops to quickly switch between the current view and the ortho views. If this was intentional, fine, but I do miss the old behaviour.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39065
No description provided.