Fix 39065: Leaving QuadView lost view settings

Now the 'User' view is used when exiting quadview.